api: swagger bugfix (routers incorretos)
